- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list
- Added: Define custom image sizes using a wizard
- Added: Watermark option for all images
- Added: Addresses are added to address book on checkout (enable in checkout module) (Ticket #24)
- Added: Abstract class ContentIsotope to build content elements
- Improved: Downloads can now be added to product variants (Ticket #116)
- Improved: PayPal Standard now shows products on paypal page (Ticket #146)
- Improved: Product reader now has a "back" link (Ticket #197)
- Improved: Downloads is now a tools option (Ticket #116)
- Improved: Remove form errors when selecting a new product variant
- Improved: Empty option labels are now taken as blankOptionLabel for variant select menus
- Improved: Variant products don't show select menus with only one option
- Improved: Cart module now hides button withouth a target page (jump to cart/checkout)
- Fixed: cart_html and cart_text now include subtotal, surcharges and grand total (Ticket #34)
- Fixed: Variant price should not show "From" when all variants have the same price
- Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
- Fixed: Printing order PDF throwed an exception
- Fixed: Use first available product type if no default/fallback is set
- Fixed: Problem with standardize function and wrong image folder (Ticket #201)
- Fixed: Incorrect reference to bcc property of a mailing object (Ticket #206)
- Fixed: All variant attributes are now mandatory
- Fixed: Phone number not filled in PayPal Standard (Ticket #171)
- Fixed: Line breaks in teaser did not work (Ticket #198)
- Fixed: tl_iso_addressbook.email is no longer mandatory (Ticket #174)
- Fixed: Removed redirect page from address book module setting (Ticket #174)
- Fixed: IsotopeProduct no longer shows attributes not available in product type
- Fixed: Cart insert tags did not work